does this work?

--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,8 @@ requires =
 envlist =
     py38-anki2.1.{45,46,47,48,49}
     py39-anki2.1.{50,51,52,53}-qt{5,6}
+#envlist =
+#    py38-anki2.1.45
 
 [testenv:.tox]
 install_command =
