--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,39 @@ jobs:
           - name: Anki 2.1.45
             python: 3.8
             environment: py38-anki2.1.45
+          - name: Anki 2.1.46
+            python: 3.8
+            environment: py38-anki2.1.46
+          - name: Anki 2.1.47
+            python: 3.8
+            environment: py38-anki2.1.47
+          - name: Anki 2.1.48
+            python: 3.8
+            environment: py38-anki2.1.48
+          - name: Anki 2.1.49
+            python: 3.8
+            environment: py38-anki2.1.49
+          - name: Anki 2.1.50 (Qt5)
+            python: 3.9
+            environment: py39-anki2.1.50-qt5
+          - name: Anki 2.1.50 (Qt6)
+            python: 3.9
+            environment: py39-anki2.1.50-qt6
+          - name: Anki 2.1.51 (Qt5)
+            python: 3.9
+            environment: py39-anki2.1.51-qt5
+          - name: Anki 2.1.51 (Qt6)
+            python: 3.9
+            environment: py39-anki2.1.51-qt6
+          - name: Anki 2.1.52 (Qt5)
+            python: 3.9
+            environment: py39-anki2.1.52-qt5
+          - name: Anki 2.1.52 (Qt6)
+            python: 3.9
+            environment: py39-anki2.1.52-qt6
+          - name: Anki 2.1.53 (Qt5)
+            python: 3.9
+            environment: py39-anki2.1.53-qt5
           - name: Anki 2.1.53 (Qt6)
             python: 3.9
             environment: py39-anki2.1.53-qt6
@@ -24,7 +57,7 @@ jobs:
           sudo apt-get install -y pyqt5-dev-tools xvfb jq
 
       - name: Setup Python ${{ matrix.python }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
 
@@ -32,7 +65,7 @@ jobs:
         run: pip install 'tox==3.28.0'
 
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Run tests
-        run: tox -vvve ${{ matrix.environment }} -- --forked --verbose
+        run: tox -vvve ${{ matrix.environment }} -- -k "test_addon_buttons_get_disabled_enabled" --forked --verbose
