--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,4 +68,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run tests
-        run: tox -vvve ${{ matrix.environment }} -- -k "test_addon_buttons_get_disabled_enabled" --forked --verbose
+        run: |
+          export QTWEBENGINE_CHROMIUM_FLAGS="--no-sandbox"
+          tox -vvve ${{ matrix.environment }} -- -k "test_addon_buttons_get_disabled_enabled" --forked --verbose
